# timedb

./: .gitignore  MANIFEST.in  README.md  TESTING.md  pyproject.toml  pytest.ini  render.yml
.pm/prompts/: prompt-2026-01-13-08-03-7147203.md
docs/: examples.rst  index.rst  sdk.rst
docs/_build/doctrees/: installation.doctree
examples/: 01_basic_usage.py  02_forecast_revisions.py  03_updates_and_annotations.py  04_interval_values.py  README.md  __init__.py  nb_01_write_dataframe.ipynb  nb_02_units_validation.ipynb  nb_03_forecast_revisions.ipynb  nb_07_api_usage.ipynb  nb_08_authentication.ipynb  nb_08a_authentication_cli.ipynb  nb_08b_authentication_sdk.ipynb  notebook_01_write_dataframe.ipynb  notebook_02_read_dataframe.ipynb  notebook_03_complete_workflow.ipynb
tests/: README.md  __init__.py  conftest.py  test_insert.py  test_read.py  test_update.py
timedb/: __init__.py  api.py  cli.py  pg_create_table.py  pg_read_table.py  pg_update_records.py  sdk.py  units.py
timedb/db/: __init__.py  create.py  delete.py  insert.py  insert_with_metadata.py  read.py  series.py  update.py
timedb/sql/: pg_create_table.sql  pg_create_table_with_metadata.sql  pg_create_users_table.sql  pg_insert_table_with_metadata.sql  pg_read_table.sql  pg_update_records.sql
timedb/workflows/: workflow_fingrid_wind_forecast.py
