[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["timedb/*.sql"]

[tool.hatch.build.targets.sdist]
include = ["timedb/*.sql"]

[project]
name = "timedb"
version = "0.1.1"
description = "timedb — opinionated schema & API for time series"
readme = "README.md"
requires-python = ">=3.8"

# runtime dependencies (adjust versions as you prefer)
dependencies = [
  "click>=8.0",
  "psycopg[binary]>=3.1",     # psycopg3 with binary wheels on macOS
  "python-dotenv>=0.21",      # load_dotenv used in helper scripts
]

# expose the CLI command 'timedb' which points to the Click group `cli` in timedb/cli.py
[project.scripts]
timedb = "timedb.cli:cli"